// Vitest Snapshot v1

exports[`build fs output > _00 manifest.json 1`] = `
Object {
  "background": Object {
    "service_worker": "service-worker-loader.js",
    "type": "module",
  },
  "description": "test extension",
  "manifest_version": 3,
  "name": "test extension",
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "https://github.com/*",
        "https://google.com/*",
      ],
      "resources": Array [
        "assets/content1.ts.hash0.js",
        "assets/content2.ts.hash1.js",
        "assets/font.hash2.otf",
        "assets/image.hash3.png",
        "assets/script.ts.hash4.js",
      ],
      "use_dynamic_url": false,
    },
  ],
}
`;

exports[`build fs output > _01 output files 1`] = `
Array [
  "assets/background.ts.hash5.js",
  "assets/content1.ts.hash0.js",
  "assets/content2.ts.hash1.js",
  "assets/font.hash2.otf",
  "assets/image.hash3.png",
  "assets/script.ts.hash4.js",
  "manifest.json",
  "service-worker-loader.js",
]
`;

exports[`build fs output > assets/background.ts.hash5.js 1`] = `
"const t=\\"/assets/content1.ts.hash0.js\\",e=\\"/assets/content2.ts.hash1.js\\";chrome.scripting.executeScript({files:[t,e],target:{tabId:1}});
"
`;

exports[`build fs output > assets/content1.ts.hash0.js 1`] = `
"(function(){const t=\\"/assets/script.ts.hash4.js\\";console.log(\\"content.ts\\",{script:t});
})()
"
`;

exports[`build fs output > assets/content2.ts.hash1.js 1`] = `
"(function(){const o=\\"/assets/font.hash2.otf\\";console.log(\\"content2.ts\\",{font:o});
})()
"
`;

exports[`build fs output > assets/script.ts.hash4.js 1`] = `
"const s=\\"/assets/image.hash3.png\\";console.log(\\"main world script\\",{icon:s});
"
`;

exports[`build fs output > service-worker-loader.js 1`] = `
"import './assets/background.ts.hash5.js';
"
`;
